se crea la clase Postulante que permitirá ingresar los datos a la BD al inscribir un nuevo postulante

--- a/Instituto/Instituto.csproj
+++ b/Instituto/Instituto.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Datos\Conexion.cs" />
     <Compile Include="Datos\Usuarios.cs" />
+    <Compile Include="Entidades\E_Postulante.cs" />
     <Compile Include="formPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
