--- a/Instituto/Instituto.csproj
+++ b/Instituto/Instituto.csproj
@@ -46,10 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Datos\Conexion.cs" />
-    <Compile Include="Datos\Postulantes.cs" />
-    <Compile Include="Datos\Usuarios.cs" />
-    <Compile Include="Entidades\E_Postulante.cs" />
     <Compile Include="formPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +72,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="formPrincipal.resx">
       <DependentUpon>formPrincipal.cs</DependentUpon>
     </EmbeddedResource>
