--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -43,8 +43,13 @@
   <ItemGroup>
     <Compile Include="AcessoDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuario.cs" />
     <Compile Include="UsuarioDatos.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dominio\Dominio.csproj">
+      <Project>{58d06c67-e4ae-4427-b9c3-befb772f8ac5}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
